Restore CLI dist executable build